[package]
name = "lust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
nerd_fonts = "0.1"
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.7.2"
